force-app/main/default/objects/Interaction__c/fields/Expected_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Expected_Start_Time__c</fullName>
    <label>Expected Start Time</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>