force-app/main/default/objects/Interaction__c/fields/InteractionPlan__c.field-meta.xml
<CustomField>
    <fullName>InteractionPlan__c</fullName>
    <label>InteractionPlan</label>
    <referenceTo>InteractionPlan__c</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>