force-app/main/default/objects/Interaction__c/fields/InteractionSchedule__c.field-meta.xml
<CustomField>
    <fullName>InteractionSchedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>InteractionSchedule</label>
    <referenceTo>InteractionSchedule__c</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <type>Lookup</type>
</CustomField>