force-app/main/default/objects/Interaction__c/fields/InterviewParticipant__c.field-meta.xml
<CustomField>
    <fullName>InterviewParticipant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>InterviewParticipant</label>
    <referenceTo>InterviewParticipant__c</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>