force-app/main/default/objects/Interaction__c/fields/QuestionaireTemplate__c.field-meta.xml
<CustomField>
    <fullName>QuestionaireTemplate__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>QuestionaireTemplate</label>
    <referenceTo>QuestionaireTemplate__c</referenceTo>
    <relationshipLabel>Interactions</relationshipLabel>
    <relationshipName>Interactions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>